k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api
  namespace: devops-assignment
spec:
  type: ClusterIP

  selector:
    app: sample-api

  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
